--- a/avatars/avatars.html
+++ b/avatars/avatars.html
@@ -3,30 +3,44 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>homework</title>
-  <link rel="stylesheet" href="./avatars.css" />
+  <title>avatars-status</title>
+  <link rel="stylesheet" href="./style/normalize.css" />
+  <link rel="stylesheet" href="./style/reset.css" />
+  <link rel="stylesheet" href="./style/avatars.css" />
 </head>
 <body>
-  <div class="wrap-person">
-    <div class="wrap-womens">
-      <img class="women-hol" src="../images/faces/face1.jpg" alt="여성 1번" />
-        <div class="off-icon"></div>
-      <img class="women-jjak" src="../images/faces/face2.jpg" alt="여성 2번" />
-        <div class="on-icon"></div>
-      <img class="women-hol" src="../images/faces/face4.jpg" alt="여성 3번" />
-        <div class="off-icon"></div>
-      <img class="women-jjak" src="../images/faces/face4.png" alt="여성 4번" />
-        <div class="on-icon"></div>
+  <div class="wrap-avatars">
+    <div class="avatars-status" aria-label="여성 1번 접속상태">
+      <img class="face1 face" src="../images/faces/face1.jpg" alt="여성 1번" />
+        <div class="icon" aria-label="offline"></div>
     </div>
-    <div class="wrap-mens">
-      <img class="men-front" src="../images/faces/face5.jpg" alt="남성 1번" />
-      <div class="on-icon"></div>
-      <img class="men-front" src="../images/faces/face6.jpg" alt="남성 2번" />
-      <div class="on-icon"></div>
-      <img class="men-back" src="../images/faces/face7.jpg" alt="남성 3번" />
-      <div class="off-icon"></div>
-      <img class="men-back" src="../images/faces/face8.jpg" alt="남성 4번" />
-      <div class="off-icon"></div>
+    <div class="avatars-status" aria-label="여성 2번 접속상태">
+      <img class="face2 face" src="../images/faces/face2.jpg" alt="여성 2번" />
+        <div class="icon" aria-label="online"></div>
+    </div>
+    <div class="avatars-status" aria-label="여성 3번 접속상태">
+      <img class="face3 face" src="../images/faces/face4.png" alt="여성 3번" />
+        <div class="icon" aria-label="offline"></div>
+    </div>
+    <div class="avatars-status" aria-label="여성 4번 접속상태">
+      <img class="face4 face" src="../images/faces/face4.jpg" alt="여성 4번" />
+        <div class="icon" aria-label="online"></div>
+    </div>
+    <div class="avatars-status" aria-label="남성 1번 접속상태">
+      <img class="face5 face" src="../images/faces/face5.jpg" alt="남성 1번" />
+      <div class="icon" aria-label="online"></div>
+    </div>
+    <div class="avatars-status" aria-label="남성 2번 접속상태">
+      <img class="face6 face" src="../images/faces/face6.jpg" alt="남성 2번" />
+      <div class="icon" aria-label="online"></div>
+    </div>
+    <div class="avatars-status" aria-label="남성 3번 접속상태">
+      <img class="face7 face" src="../images/faces/face7.jpg" alt="남성 3번" />
+      <div class="icon" aria-label="offline"></div>
+    </div>
+    <div class="avatars-status" aria-label="남성 4번 접속상태">
+      <img class="face8 face" src="../images/faces/face8.jpg" alt="남성 4번" />
+      <div class="icon" aria-label="offline"></div>
     </div>
   </div>
 </body>
